minor fixes and delete customer api
